correciones en tamaños

--- a/app/styles/partials/_navbar.scss
+++ b/app/styles/partials/_navbar.scss
@@ -15,7 +15,7 @@
     .containers-navbar:nth-child(1) {
         /* border: 2px solid greenyellow; */
         width: 25%;
-        padding: .8rem;
+        padding: 1rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -26,7 +26,7 @@
         width: 75%;
         display: flex;
         justify-content: flex-end;
-        padding: .5rem;
+        padding: .8rem;
     }
 
     #logo-ia {
