--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -23,7 +23,7 @@
   .containers-navbar:nth-child(1) {
     /* border: 2px solid greenyellow; */
     width: 25%;
-    padding: .8rem;
+    padding: 1rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -43,7 +43,7 @@
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    padding: .5rem;
+    padding: .8rem;
   }
   #logo-ia {
     /* border: 2px solid blueviolet; */
