componente navbar desktop

--- a/app/styles/partials/_navbar_mobile.scss
+++ b/app/styles/partials/_navbar_mobile.scss
@@ -1,11 +1,13 @@
-// ? Styles Navbar
+// ? Styles Navbar Mobile
 
-@media (min-width:375px) {
+@media (min-width:320px) {
     #container-general__navbar-mobile {
         /* border: 2px solid red; */
         display: flex;
         background-color: #141414;
         padding: .5rem;
+        position: fixed;
+        width: 100%;
     }
 
     .containers-navbar {
@@ -15,7 +17,7 @@
     .containers-navbar:nth-child(1) {
         /* border: 2px solid greenyellow; */
         width: 25%;
-        padding: 1rem;
+        padding: .8rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -26,7 +28,7 @@
         width: 75%;
         display: flex;
         justify-content: flex-end;
-        padding: .9rem;
+        padding: .6rem;
     }
 
     #logo-ia {
@@ -44,6 +46,8 @@
     #contenedor-hamburguesa__navbar-mobile {
         transition: .5s ease-in-out;
         min-height: 0px;
+        position: relative;
+        top: 3.5rem;
     }
 
     @keyframes bg-animate {
@@ -100,5 +104,58 @@
     .logo-social-media__navbar-mobile {
         height: 100%;
         width: 100%;
+    }
+}
+
+@media screen and (min-width:360px) {
+    .containers-navbar:nth-child(1) {
+        padding: 1.2rem;
+    }
+
+    .containers-navbar:nth-child(2) {
+        padding: 1rem;
+    }
+
+    .item-list-navbar-mobile {
+        font-size: 16px;
+    }
+
+    #contenedor-hamburguesa__navbar-mobile {
+        top: 4.7rem;
+    }
+}
+
+
+@media screen and (min-width:375px) {
+    .containers-navbar:nth-child(1) {
+        padding: 1rem;
+    }
+
+    .containers-navbar:nth-child(2) {
+        padding: 1rem;
+    }
+
+    #contenedor-hamburguesa__navbar-mobile {
+        top: 4.5rem;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .containers-navbar:nth-child(1) {
+        /* border: 2px solid greenyellow; */
+        padding: 1.5rem;
+    }
+
+    .containers-navbar:nth-child(2) {
+        /* border: 2px solid blue; */
+        padding: 1.4rem;
+    }
+
+    .item-list-navbar-mobile {
+        font-size: 20px;
+    }
+
+    #contenedor-hamburguesa__navbar-mobile {
+        top: 6.2rem;
     }
 }
