--- a/app/styles/partials/_navbar_desktop.scss
+++ b/app/styles/partials/_navbar_desktop.scss
@@ -1,1 +1,51 @@
 //? Estilos Navbar Desktop
+
+@media screen and (min-width:320px) and (max-width:900px) {
+    #container-general__navbar-desktop {
+        display: none;
+    }
+}
+
+@media screen and (min-width:900px){
+    #container-general__navbar-desktop {
+        background-color: #141414;
+        height: 12vh;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .containers-navbar-desktop{
+        /* border: 2px solid green; */
+        height: 100%;
+    }
+
+    #logo-ia-desktop{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    .containers-navbar-desktop:nth-child(1){
+        width: 20%;
+        padding: 1.8rem;
+    }
+
+    .containers-navbar-desktop:nth-child(2){
+        width: 60%;
+        display: flex;
+        justify-content: center;
+        justify-content: space-evenly;
+        color: white;
+        font-size: 15px;
+        align-items: center;
+    }
+
+    .containers-navbar-desktop:nth-child(3){
+        width: 20%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        color: white;
+    }
+}
