--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -178,7 +178,82 @@
     font-size: 20px;
   }
   #contenedor-hamburguesa__navbar-mobile {
-    top: 6.2rem;
+    top: 6rem;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  #container-general__navbar-mobile {
+    display: none;
+  }
+  #contenedor-hamburguesa__navbar-mobile {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 900px) {
+  #container-general__navbar-desktop {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  #container-general__navbar-desktop {
+    background-color: #141414;
+    height: 12vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .containers-navbar-desktop {
+    /* border: 2px solid green; */
+    height: 100%;
+  }
+  #logo-ia-desktop {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .containers-navbar-desktop:nth-child(1) {
+    width: 20%;
+    padding: 1.8rem;
+  }
+  .containers-navbar-desktop:nth-child(2) {
+    width: 60%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    color: white;
+    font-size: 15px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .containers-navbar-desktop:nth-child(3) {
+    width: 20%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: white;
   }
 }
 /*# sourceMappingURL=styles.css.map */
