--- a/app/styles/partials/_navbar_desktop.scss
+++ b/app/styles/partials/_navbar_desktop.scss
@@ -6,32 +6,39 @@
     }
 }
 
-@media screen and (min-width:900px){
+@media screen and (min-width:900px) {
     #container-general__navbar-desktop {
         background-color: #141414;
-        height: 12vh;
+        height: 11vh;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: fixed;
+        top: 0;
+        width: 100%;
     }
 
-    .containers-navbar-desktop{
+    .containers-navbar-desktop {
         /* border: 2px solid green; */
         height: 100%;
     }
 
-    #logo-ia-desktop{
+    #logo-ia-desktop {
         width: 100%;
         height: 100%;
         object-fit: contain;
+
+        &::selection {
+            background-color: transparent;
+        }
     }
 
-    .containers-navbar-desktop:nth-child(1){
+    .containers-navbar-desktop:nth-child(1) {
         width: 20%;
         padding: 1.8rem;
     }
 
-    .containers-navbar-desktop:nth-child(2){
+    .containers-navbar-desktop:nth-child(2) {
         width: 60%;
         display: flex;
         justify-content: center;
@@ -41,11 +48,47 @@
         align-items: center;
     }
 
-    .containers-navbar-desktop:nth-child(3){
+    .containers-navbar-desktop:nth-child(3) {
         width: 20%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         color: white;
+    }
+}
+
+@media screen and (min-width:1280px) {
+    #link-ref__navbar-desktop {
+        font-size: 16px;
+        font-weight: 300;
+        cursor: pointer;
+        transition: .3s ease;
+
+        &:hover {
+            color: #b8b8bb;
+        }
+
+        &::selection {
+            background-color: transparent;
+        }
+    }
+
+    #contenedor-social-media__navbar-desktop {
+        /* border: 2px solid red; */
+        width: 2.5rem;
+        height: 2.5rem;
+        padding: .5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo-social-media__navbar-desktop {
+        height: 100%;
+        width: 100%;
+        transition: .2s ease-in;
+        &:hover{
+            color: #b8b8bb;
+        }
     }
 }
