--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -200,7 +200,7 @@
 @media screen and (min-width: 900px) {
   #container-general__navbar-desktop {
     background-color: #141414;
-    height: 12vh;
+    height: 11vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -210,6 +210,9 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
   .containers-navbar-desktop {
     /* border: 2px solid green; */
@@ -220,6 +223,12 @@
     height: 100%;
     -o-object-fit: contain;
        object-fit: contain;
+  }
+  #logo-ia-desktop::-moz-selection {
+    background-color: transparent;
+  }
+  #logo-ia-desktop::selection {
+    background-color: transparent;
   }
   .containers-navbar-desktop:nth-child(1) {
     width: 20%;
@@ -254,6 +263,49 @@
         -ms-flex-align: center;
             align-items: center;
     color: white;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #link-ref__navbar-desktop {
+    font-size: 16px;
+    font-weight: 300;
+    cursor: pointer;
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
+  }
+  #link-ref__navbar-desktop:hover {
+    color: #b8b8bb;
+  }
+  #link-ref__navbar-desktop::-moz-selection {
+    background-color: transparent;
+  }
+  #link-ref__navbar-desktop::selection {
+    background-color: transparent;
+  }
+  #contenedor-social-media__navbar-desktop {
+    /* border: 2px solid red; */
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: .5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .logo-social-media__navbar-desktop {
+    height: 100%;
+    width: 100%;
+    -webkit-transition: .2s ease-in;
+    transition: .2s ease-in;
+  }
+  .logo-social-media__navbar-desktop:hover {
+    color: #b8b8bb;
   }
 }
 /*# sourceMappingURL=styles.css.map */
