primer agregados en home

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,3 +1,4 @@
 @import './partials/home';
 @import './partials/navbar_mobile';
 @import './partials/navbar_desktop';
+@import './partials//home_p1'
