--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -308,4 +308,45 @@
     color: #b8b8bb;
   }
 }
+
+@media screen and (min-width: 360px) {
+  #container-general__Home_P1 {
+    /* border: 2px solid red; */
+    margin-top: 6rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: .7rem;
+  }
+  #image-home_P1 {
+    width: 11rem;
+    height: 20rem;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: -55px;
+       object-position: -55px;
+    border-radius: 0px 30px 00px 30px;
+  }
+  #container-info__Home-P1 {
+    /* border: 2px solid green; */
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .item-text__Home-P1 {
+    font-size: 16px;
+    font-weight: 400;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
