--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -1,32 +1,64 @@
 // ? Estilos Home_P1
 
 @media screen and (min-width:360px) {
-    #container-general__Home_P1{
-        /* border: 2px solid red; */
-        margin-top: 3rem;
-        display: flex;
-        padding: .7rem;
+    @keyframes gradient-animation {
+        0% {
+            background-position: 0% 60%;
+        }
+
+        100% {
+            background-position: 100% 50%;
+        }
     }
 
-    #image-home_P1{
-        width: 11rem;
+    #container-general__Home_P1 {
+        /* border: 2px solid red; */
+        display: flex;
+        padding: .7rem;
+        height: 80vh;
+
+        background: linear-gradient(to top right, rgb(17, 17, 17), black);
+        background-size: 200% auto;
+        animation: gradient-animation 5s linear infinite;
+
+        padding-top: 5rem;
+    }
+
+    #image-home_P1 {
+        width: 10rem;
         height: 20rem;
         object-fit: cover;
-        object-position: -55px;
+        object-position: -64px;
         border-radius: 0px 30px 00px 30px;
     }
 
-    #container-info__Home-P1{
+    #container-info__Home-P1 {
         /* border: 2px solid green; */
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: .5rem;
+        padding-top: 2rem;
+        height: 20rem;
     }
 
-    .item-text__Home-P1{
-        font-size: 16px;
-        font-weight: 400;
+    .item-text__Home-P1 {
+        font-size: 17px;
+        font-weight: 300;
+        color: white;
+    }
+
+    #button-descargarCV__Home__P1 {
+        margin-top: .3rem;
+        background-color: #047857;
+        color: white;
+        padding: .5rem;
+        border: none;
+        cursor: pointer;
+        border-radius: 20px;
+        width: 85%;
+        text-align: center;
     }
 }
