prueba de gradient

--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -17,7 +17,7 @@
         padding: .7rem;
         height: 80vh;
 
-        background: linear-gradient(to top right, rgb(17, 17, 17), black);
+        background: linear-gradient(to top right, red, green);
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
 
