--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -298,7 +298,10 @@
 @media screen and (min-width: 360px) {
   @-webkit-keyframes gradient-animation {
     0% {
-      background-position: 0% 60%;
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 50% 0%;
     }
     100% {
       background-position: 100% 50%;
@@ -306,7 +309,10 @@
   }
   @keyframes gradient-animation {
     0% {
-      background-position: 0% 60%;
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 50% 0%;
     }
     100% {
       background-position: 100% 50%;
@@ -317,27 +323,31 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: .7rem;
-    height: 80vh;
-    background: -webkit-gradient(linear, left bottom, right top, from(red), to(green));
-    background: linear-gradient(to top right, red, green);
+    height: 90vh;
+    background: -webkit-gradient(linear, right bottom, left top, from(#3d3d3d), to(black));
+    background: linear-gradient(to top left, #3d3d3d, black);
     background-size: 200% auto;
     -webkit-animation: gradient-animation 5s linear infinite;
             animation: gradient-animation 5s linear infinite;
-    padding-top: 5rem;
   }
   #image-home_P1 {
-    width: 10rem;
-    height: 20rem;
+    /* border: 2px solid green; */
+    width: 7rem;
+    height: 7rem;
     -o-object-fit: cover;
        object-fit: cover;
-    -o-object-position: -64px;
-       object-position: -64px;
-    border-radius: 0px 30px 00px 30px;
+    border-radius: 50%;
+    margin: 1rem 0 0 1rem;
   }
   #container-info__Home-P1 {
     /* border: 2px solid green; */
     width: 100%;
+    margin-top: 2rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -345,23 +355,26 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    gap: .5rem;
-    padding-top: 2rem;
+    gap: .3rem;
     height: 20rem;
   }
   .item-text__Home-P1 {
-    font-size: 17px;
+    font-size: 10px;
     font-weight: 300;
     color: white;
   }
+  .item-text__Home-P1:nth-child(1) {
+    font-size: 32px;
+  }
+  .item-text__Home-P1:nth-child(2) {
+    font-size: 15px;
+    color: #737373;
+  }
   #button-descargarCV__Home__P1 {
-    margin-top: .3rem;
+    margin-top: .2rem;
     background-color: #047857;
     color: white;
     padding: .5rem;
