--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -20,7 +20,7 @@
         display: flex;
         flex-direction: column;
         padding: .7rem;
-        height: 90vh;
+        height: 85vh;
         background: linear-gradient(to top left, rgb(61, 61, 61), rgb(0, 0, 0));
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
@@ -71,5 +71,43 @@
         border-radius: 20px;
         width: 85%;
         text-align: center;
+    }
+}
+
+@media screen and (min-width:375px) {
+    #container-general__Home_P1 {
+        height: 90vh;
+    }
+
+    #image-home_P1 {
+        /* border: 2px solid green; */
+        width: 7.5rem;
+        height: 7.5rem;
+        object-fit: cover;
+        border-radius: 50%;
+        margin: 1rem 0 0 1.3rem;
+    }
+
+    .item-text__Home-P1:nth-child(2) {
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width:414px) {
+    #image-home_P1 {
+        /* border: 2px solid green; */
+        width: 7.5rem;
+        height: 7.5rem;
+        object-fit: cover;
+        border-radius: 50%;
+        margin: 1rem 0 0 1.3rem;
+    }
+
+    .item-text__Home-P1:nth-child(1) {
+        font-size: 34px;
+    }
+
+    .item-text__Home-P1:nth-child(2) {
+        font-size: 17px;
     }
 }
