--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -328,7 +328,7 @@
         -ms-flex-direction: column;
             flex-direction: column;
     padding: .7rem;
-    height: 90vh;
+    height: 85vh;
     background: -webkit-gradient(linear, right bottom, left top, from(#3d3d3d), to(black));
     background: linear-gradient(to top left, #3d3d3d, black);
     background-size: 200% auto;
@@ -383,6 +383,42 @@
     border-radius: 20px;
     width: 85%;
     text-align: center;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  #container-general__Home_P1 {
+    height: 90vh;
+  }
+  #image-home_P1 {
+    /* border: 2px solid green; */
+    width: 7.5rem;
+    height: 7.5rem;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 50%;
+    margin: 1rem 0 0 1.3rem;
+  }
+  .item-text__Home-P1:nth-child(2) {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 414px) {
+  #image-home_P1 {
+    /* border: 2px solid green; */
+    width: 7.5rem;
+    height: 7.5rem;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 50%;
+    margin: 1rem 0 0 1.3rem;
+  }
+  .item-text__Home-P1:nth-child(1) {
+    font-size: 34px;
+  }
+  .item-text__Home-P1:nth-child(2) {
+    font-size: 17px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
