--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,4 +1,5 @@
-@import './partials/home';
+@import './partials/page';
 @import './partials/navbar_mobile';
 @import './partials/navbar_desktop';
-@import './partials//home_p1'
+@import './partials//home_p1';
+@import './partials//home_p2';
