--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -20,7 +20,7 @@
         display: flex;
         flex-direction: column;
         padding: .7rem;
-        height: 85vh;
+        min-height: 100vh;
         background: linear-gradient(to top left, rgb(61, 61, 61), rgb(0, 0, 0));
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
@@ -47,17 +47,16 @@
     }
 
     .item-text__Home-P1 {
-        font-size: 10px;
         font-weight: 300;
         color: white;
     }
 
     .item-text__Home-P1:nth-child(1) {
-        font-size: 32px;
+        font-size: 30px;
     }
 
     .item-text__Home-P1:nth-child(2) {
-        font-size: 15px;
+        font-size: 14px;
         color: #737373;
     }
 
@@ -72,6 +71,62 @@
         width: 85%;
         text-align: center;
     }
+
+    @keyframes border-animation {
+        0% { border-color: red; }
+        25% { border-color: blue; }
+        50% { border-color: green; }
+        75% { border-color: yellow; }
+        100% { border-color: purple; }
+      }
+
+    #container-texto__home__P1 {
+        position: relative;
+        width: 100%;
+        margin-top: 1.8rem;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 1.6rem;
+        animation: border-animation 10s infinite;
+      }
+  
+      #container-texto__home__P1::before,
+      #container-texto__home__P1::after {
+        content: "";
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        border: 3px solid #000000;
+        margin: 0 1rem;
+        border-radius: 3px;
+        transform: rotate(180deg);
+        animation: border-animation 5s infinite;
+      }
+  
+      #container-texto__home__P1::before {
+        top: 0;
+        right: 0;
+        border-top: none;
+        border-right: none;
+      }
+  
+      #container-texto__home__P1::after {
+        bottom: 0;
+        left: 0;
+        border-bottom: none;
+        border-left: none;
+      }
+
+      #texto-home__P1{
+          font-size: 14px;
+          text-align: center;
+          line-height: 1.7rem;
+          font-weight: 300;
+          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
 }
 
 @media screen and (min-width:375px) {
