--- a/app/styles/partials/_page.scss
+++ b/app/styles/partials/_page.scss
@@ -3,10 +3,14 @@
 @tailwind utilities;
 
 //! Reseteo General - OBLIGATORIO
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    &::selection {
+        background-color: transparent;
+    }
 }
 
 //? Estilos de Pagina Home
