--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -73,12 +73,26 @@
     }
 
     @keyframes border-animation {
-        0% { border-color: red; }
-        25% { border-color: blue; }
-        50% { border-color: green; }
-        75% { border-color: yellow; }
-        100% { border-color: purple; }
-      }
+        0% {
+            border-color: red;
+        }
+
+        25% {
+            border-color: blue;
+        }
+
+        50% {
+            border-color: green;
+        }
+
+        75% {
+            border-color: yellow;
+        }
+
+        100% {
+            border-color: purple;
+        }
+    }
 
     #container-texto__home__P1 {
         position: relative;
@@ -89,13 +103,13 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        padding: 1.6rem;
+        padding: 1.7rem;
         animation: border-animation 10s infinite;
-      }
-  
-    
-      #container-texto__home__P1::before,
-      #container-texto__home__P1::after {
+    }
+
+
+    #container-texto__home__P1::before,
+    #container-texto__home__P1::after {
         content: "";
         position: absolute;
         width: 60px;
@@ -105,36 +119,32 @@
         border-radius: 3px;
         transform: rotate(180deg);
         animation: border-animation 5s infinite;
-      }
-  
-      #container-texto__home__P1::before {
+    }
+
+    #container-texto__home__P1::before {
         top: 0;
         right: 0;
         border-top: none;
         border-right: none;
-      }
-  
-      #container-texto__home__P1::after {
+    }
+
+    #container-texto__home__P1::after {
         bottom: 0;
         left: 0;
         border-bottom: none;
         border-left: none;
-      }
+    }
 
-      #texto-home__P1{
-          font-size: 14px;
-          text-align: center;
-          line-height: 1.7rem;
-          font-weight: 300;
-          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      }
+    #texto-home__P1 {
+        font-size: 14px;
+        text-align: center;
+        line-height: 1.7rem;
+        font-weight: 300;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
 }
 
 @media screen and (min-width:375px) {
-    #container-general__Home_P1 {
-        height: 90vh;
-    }
-
     #image-home_P1 {
         /* border: 2px solid green; */
         width: 7.5rem;
@@ -146,6 +156,19 @@
 
     .item-text__Home-P1:nth-child(2) {
         font-size: 16px;
+    }
+
+    #container-texto__home__P1 {
+        margin-top: 1rem;
+        padding: 1.7rem;
+    }
+
+    #texto-home__P1 {
+        font-size: 14.5px;
+        text-align: center;
+        line-height: 1.7rem;
+        font-weight: 300;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 }
 
