--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -2,7 +2,7 @@
 
 @media screen and (min-width:360px) {
     #container-general__Home__P2{
-        border: 2px solid red;
+        /* border: 2px solid red; */
         height: 100vh;
     }
 }
