--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -440,7 +440,7 @@
         -ms-flex-align: center;
             align-items: center;
     text-align: center;
-    padding: 1.6rem;
+    padding: 1.7rem;
     -webkit-animation: border-animation 10s infinite;
             animation: border-animation 10s infinite;
   }
@@ -480,9 +480,6 @@
 }
 
 @media screen and (min-width: 375px) {
-  #container-general__Home_P1 {
-    height: 90vh;
-  }
   #image-home_P1 {
     /* border: 2px solid green; */
     width: 7.5rem;
@@ -494,6 +491,17 @@
   }
   .item-text__Home-P1:nth-child(2) {
     font-size: 16px;
+  }
+  #container-texto__home__P1 {
+    margin-top: 1rem;
+    padding: 1.7rem;
+  }
+  #texto-home__P1 {
+    font-size: 14.5px;
+    text-align: center;
+    line-height: 1.7rem;
+    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 }
 
@@ -517,7 +525,7 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Home__P2 {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 100vh;
   }
 }
