--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -498,10 +498,6 @@
   }
   #texto-home__P1 {
     font-size: 14.5px;
-    text-align: center;
-    line-height: 1.7rem;
-    font-weight: 300;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 }
 
@@ -516,10 +512,21 @@
     margin: 1rem 0 0 1.3rem;
   }
   .item-text__Home-P1:nth-child(1) {
-    font-size: 34px;
+    font-size: 32px;
   }
   .item-text__Home-P1:nth-child(2) {
-    font-size: 17px;
+    font-size: 16px;
+  }
+  #container-texto__home__P1 {
+    margin-top: 1.5rem;
+    padding: 1.9rem;
+  }
+  #texto-home__P1 {
+    font-size: 16px;
+    text-align: center;
+    line-height: 1.9rem;
+    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 }
 
