--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -21,7 +21,7 @@
         flex-direction: column;
         padding: .7rem;
         min-height: 100vh;
-        background: linear-gradient(to top left, rgb(61, 61, 61), rgb(0, 0, 0));
+        background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0));
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
     }
@@ -74,23 +74,23 @@
 
     @keyframes border-animation {
         0% {
-            border-color: red;
+            border-color: #9333ea;
         }
 
         25% {
-            border-color: blue;
+            border-color: #6d28d9;
         }
 
         50% {
-            border-color: green;
+            border-color: #5b21b6;
         }
 
         75% {
-            border-color: yellow;
+            border-color: #8b5cf6;
         }
 
         100% {
-            border-color: purple;
+            border-color: #5b21b6;
         }
     }
 
