--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -337,8 +337,8 @@
             flex-direction: column;
     padding: .7rem;
     min-height: 100vh;
-    background: -webkit-gradient(linear, right bottom, left top, from(#3d3d3d), to(black));
-    background: linear-gradient(to top left, #3d3d3d, black);
+    background: -webkit-gradient(linear, right bottom, left top, from(#2b2b2b), to(black));
+    background: linear-gradient(to top left, #2b2b2b, black);
     background-size: 200% auto;
     -webkit-animation: gradient-animation 5s linear infinite;
             animation: gradient-animation 5s linear infinite;
@@ -393,36 +393,36 @@
   }
   @-webkit-keyframes border-animation {
     0% {
-      border-color: red;
+      border-color: #9333ea;
     }
     25% {
-      border-color: blue;
+      border-color: #6d28d9;
     }
     50% {
-      border-color: green;
+      border-color: #5b21b6;
     }
     75% {
-      border-color: yellow;
+      border-color: #8b5cf6;
     }
     100% {
-      border-color: purple;
+      border-color: #5b21b6;
     }
   }
   @keyframes border-animation {
     0% {
-      border-color: red;
+      border-color: #9333ea;
     }
     25% {
-      border-color: blue;
+      border-color: #6d28d9;
     }
     50% {
-      border-color: green;
+      border-color: #5b21b6;
     }
     75% {
-      border-color: yellow;
+      border-color: #8b5cf6;
     }
     100% {
-      border-color: purple;
+      border-color: #5b21b6;
     }
   }
   #container-texto__home__P1 {
