correcion en medida vh en home-1

--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -20,10 +20,11 @@
         display: flex;
         flex-direction: column;
         padding: .7rem;
-        min-height: 100vh;
+        min-height: 110vh;
         background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0));
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
+        z-index: -1;
     }
 
     #image-home_P1 {
@@ -145,6 +146,11 @@
 }
 
 @media screen and (min-width:375px) {
+    #container-general__Home_P1 {
+        /* border: 2px solid red; */
+        min-height: 112vh;
+    }
+
     #image-home_P1 {
         /* border: 2px solid green; */
         width: 7.5rem;
