--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -336,12 +336,13 @@
         -ms-flex-direction: column;
             flex-direction: column;
     padding: .7rem;
-    min-height: 100vh;
+    min-height: 110vh;
     background: -webkit-gradient(linear, right bottom, left top, from(#2b2b2b), to(black));
     background: linear-gradient(to top left, #2b2b2b, black);
     background-size: 200% auto;
     -webkit-animation: gradient-animation 5s linear infinite;
             animation: gradient-animation 5s linear infinite;
+    z-index: -1;
   }
   #image-home_P1 {
     /* border: 2px solid green; */
@@ -480,6 +481,10 @@
 }
 
 @media screen and (min-width: 375px) {
+  #container-general__Home_P1 {
+    /* border: 2px solid red; */
+    min-height: 112vh;
+  }
   #image-home_P1 {
     /* border: 2px solid green; */
     width: 7.5rem;
@@ -533,7 +538,10 @@
 @media screen and (min-width: 360px) {
   #container-general__Home__P2 {
     /* border: 2px solid red; */
-    height: 100vh;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
+    background-color: rgba(0, 0, 0, 0.678);
+    z-index: 10;
   }
 }
 /*# sourceMappingURL=styles.css.map */
