--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -3,6 +3,9 @@
 @media screen and (min-width:360px) {
     #container-general__Home__P2{
         /* border: 2px solid red; */
-        height: 100vh;
+        background-attachment: fixed;
+        background-blend-mode: multiply;
+        background-color: rgba(0, 0, 0, 0.678);
+        z-index: 10;
     }
 }
