correcciones en texto de home 375px

--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -166,11 +166,12 @@
 
     #container-texto__home__P1 {
         margin-top: 1rem;
-        padding: 1.7rem;
+        padding: 2.2rem;
     }
 
     #texto-home__P1 {
-        font-size: 14.5px;
+        line-height: 1.8rem;
+        font-size: 15px;
     }
 }
 
