logos and skills

--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -25,6 +25,7 @@
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
         z-index: -1;
+        border: none;
     }
 
     #image-home_P1 {
