--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -1,11 +1,54 @@
 // ? Estilos Home P2
 
 @media screen and (min-width:360px) {
-    #container-general__Home__P2{
+    #container-general__Home__P2 {
+        background: linear-gradient(to top left, rgb(12, 12, 12), rgb(0, 0, 0));
+    }
+
+    #titulo-habilidades__Home-P2 {
+        font-size: 1.8rem;
+        margin: 1.2rem;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 200;
+        padding: 1rem 0;
+        color: white;
+        text-align: center;
+    }
+
+    //!Container general de las skill FRONT & BACK 
+    .container-GeneralSkill__Home-P2 {
+        /* border: 2px solid slateblue; */
+        padding: 1.2rem;
+    }
+
+    .cont-eachSkill__Home-P2 {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .titulo-stack__Home-P2 {
+        color: #8b5cf6;
+        font-size: 22px;
+        margin-bottom: .8rem;
+        text-align: center;
+    }
+
+    .nombre-skill {
+        font-size: 18px;
+        letter-spacing: .6px;
+        color: #838383;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 300;
+        margin-left: .1rem;
+    }
+
+    .logo-skill {
         /* border: 2px solid red; */
-        background-attachment: fixed;
-        background-blend-mode: multiply;
-        background-color: rgba(0, 0, 0, 0.678);
-        z-index: 10;
+        height: 50%;
+        width: 4.5rem;
+        padding: .7rem;
+        color: #404040;
     }
 }
