--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -343,6 +343,7 @@
     -webkit-animation: gradient-animation 5s linear infinite;
             animation: gradient-animation 5s linear infinite;
     z-index: -1;
+    border: none;
   }
   #image-home_P1 {
     /* border: 2px solid green; */
@@ -538,11 +539,57 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Home__P2 {
+    background: -webkit-gradient(linear, right bottom, left top, from(#0c0c0c), to(black));
+    background: linear-gradient(to top left, #0c0c0c, black);
+  }
+  #titulo-habilidades__Home-P2 {
+    font-size: 1.8rem;
+    margin: 1.2rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    padding: 1rem 0;
+    color: white;
+    text-align: center;
+  }
+  .container-GeneralSkill__Home-P2 {
+    /* border: 2px solid slateblue; */
+    padding: 1.2rem;
+  }
+  .cont-eachSkill__Home-P2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .titulo-stack__Home-P2 {
+    color: #8b5cf6;
+    font-size: 22px;
+    margin-bottom: .8rem;
+    text-align: center;
+  }
+  .nombre-skill {
+    font-size: 18px;
+    letter-spacing: .6px;
+    color: #838383;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
+    margin-left: .1rem;
+  }
+  .logo-skill {
     /* border: 2px solid red; */
-    background-attachment: fixed;
-    background-blend-mode: multiply;
-    background-color: rgba(0, 0, 0, 0.678);
-    z-index: 10;
+    height: 50%;
+    width: 4.5rem;
+    padding: .7rem;
+    color: #404040;
   }
 }
 /*# sourceMappingURL=styles.css.map */
