--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -29,7 +29,7 @@
     }
 
     .titulo-stack__Home-P2 {
-        color: #8b5cf6;
+        color: #7c50e2;
         font-size: 22px;
         margin-bottom: .8rem;
         text-align: center;
