--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -571,7 +571,7 @@
             align-items: center;
   }
   .titulo-stack__Home-P2 {
-    color: #8b5cf6;
+    color: #7c50e2;
     font-size: 22px;
     margin-bottom: .8rem;
     text-align: center;
