--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -20,12 +20,13 @@
         display: flex;
         flex-direction: column;
         padding: .7rem;
-        min-height: 110vh;
+        min-height: 120vh;
         background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0));
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
         z-index: -1;
-        border: none;
+        position: sticky;
+        top: 0;
     }
 
     #image-home_P1 {
