--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -3,22 +3,24 @@
 @media screen and (min-width:360px) {
     #container-general__Home__P2 {
         background: linear-gradient(to top left, rgb(12, 12, 12), rgb(0, 0, 0));
+        z-index: 1;
+        border-top: 5px solid black;;
     }
 
     #titulo-habilidades__Home-P2 {
         font-size: 1.8rem;
-        margin: 1.2rem;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: 200;
         padding: 1rem 0;
         color: white;
         text-align: center;
+        margin-top: 1rem;
     }
 
     //!Container general de las skill FRONT & BACK 
     .container-GeneralSkill__Home-P2 {
         /* border: 2px solid slateblue; */
-        padding: 1.2rem;
+        padding: 1rem;
     }
 
     .cont-eachSkill__Home-P2 {
@@ -30,9 +32,9 @@
 
     .titulo-stack__Home-P2 {
         color: #7c50e2;
-        font-size: 22px;
+        font-size: 23px;
         margin-bottom: .8rem;
-        text-align: center;
+        margin-left: 1rem;
     }
 
     .nombre-skill {
@@ -47,7 +49,7 @@
     .logo-skill {
         /* border: 2px solid red; */
         height: 50%;
-        width: 4.5rem;
+        width: 4.2rem;
         padding: .7rem;
         color: #404040;
     }
