--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -336,14 +336,16 @@
         -ms-flex-direction: column;
             flex-direction: column;
     padding: .7rem;
-    min-height: 110vh;
+    min-height: 120vh;
     background: -webkit-gradient(linear, right bottom, left top, from(#2b2b2b), to(black));
     background: linear-gradient(to top left, #2b2b2b, black);
     background-size: 200% auto;
     -webkit-animation: gradient-animation 5s linear infinite;
             animation: gradient-animation 5s linear infinite;
     z-index: -1;
-    border: none;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
   }
   #image-home_P1 {
     /* border: 2px solid green; */
@@ -541,19 +543,21 @@
   #container-general__Home__P2 {
     background: -webkit-gradient(linear, right bottom, left top, from(#0c0c0c), to(black));
     background: linear-gradient(to top left, #0c0c0c, black);
+    z-index: 1;
+    border-top: 5px solid black;
   }
   #titulo-habilidades__Home-P2 {
     font-size: 1.8rem;
-    margin: 1.2rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     padding: 1rem 0;
     color: white;
     text-align: center;
+    margin-top: 1rem;
   }
   .container-GeneralSkill__Home-P2 {
     /* border: 2px solid slateblue; */
-    padding: 1.2rem;
+    padding: 1rem;
   }
   .cont-eachSkill__Home-P2 {
     display: -webkit-box;
@@ -572,9 +576,9 @@
   }
   .titulo-stack__Home-P2 {
     color: #7c50e2;
-    font-size: 22px;
+    font-size: 23px;
     margin-bottom: .8rem;
-    text-align: center;
+    margin-left: 1rem;
   }
   .nombre-skill {
     font-size: 18px;
@@ -587,7 +591,7 @@
   .logo-skill {
     /* border: 2px solid red; */
     height: 50%;
-    width: 4.5rem;
+    width: 4.2rem;
     padding: .7rem;
     color: #404040;
   }
