--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -24,10 +24,12 @@
     }
 
     .cont-eachSkill__Home-P2 {
+        /* border: 2px solid red; */
         display: flex;
         flex-direction: row-reverse;
         justify-content: flex-end;
         align-items: center;
+        border: none;
     }
 
     .titulo-stack__Home-P2 {
@@ -38,7 +40,7 @@
     }
 
     .nombre-skill {
-        font-size: 18px;
+        font-size: 16px;
         letter-spacing: .6px;
         color: #838383;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
