--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -560,6 +560,7 @@
     padding: 1rem;
   }
   .cont-eachSkill__Home-P2 {
+    /* border: 2px solid red; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -573,6 +574,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    border: none;
   }
   .titulo-stack__Home-P2 {
     color: #7c50e2;
@@ -581,7 +583,7 @@
     margin-left: 1rem;
   }
   .nombre-skill {
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: .6px;
     color: #838383;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
