--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -4,8 +4,9 @@
     #container-general__Home__P2 {
         background: linear-gradient(to top left, rgb(12, 12, 12), rgb(0, 0, 0));
         z-index: 1;
-        border-top: 5px solid black;;
+        border-top: 5px solid black;
     }
+
 
     #titulo-habilidades__Home-P2 {
         font-size: 1.8rem;
