--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './partials/page';
 @import './partials/navbar_mobile';
 @import './partials/navbar_desktop';
-@import './partials//home_p1';
-@import './partials//home_p2';
+@import './partials/home_p1';
+@import './partials/home_p2';
+@import './partials/home_p3'
