--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -21,6 +21,9 @@
         /* border: 2px solid slateblue; */
         margin-top: 2rem;
         padding: .5rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
 
     .card-project__Home-P3 {
@@ -31,10 +34,12 @@
         align-items: center;
         flex-direction: row-reverse;
         transition: .5s ease;
+        background-blend-mode: multiply;
+        border-radius: 5px;
+            background-color: rgba(0, 0, 0, 0.726);
 
         &:hover {
-            background-blend-mode: multiply;
-            background-color: rgba(0, 0, 0, 0.568);
+            background-color: rgba(0, 0, 0, 0.164);
         }
     }
 
@@ -53,6 +58,8 @@
         font-weight: 300;
         z-index: 2;
         color: white;
+        overflow-wrap: break-word;
+        width: 50%;
         text-align: center;
     }
 
