--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -615,6 +615,14 @@
     /* border: 2px solid slateblue; */
     margin-top: 2rem;
     padding: .5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
   }
   .card-project__Home-P3 {
     /* border: 2px solid firebrick; */
@@ -634,10 +642,12 @@
             flex-direction: row-reverse;
     -webkit-transition: .5s ease;
     transition: .5s ease;
+    background-blend-mode: multiply;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.726);
   }
   .card-project__Home-P3:hover {
-    background-blend-mode: multiply;
-    background-color: rgba(0, 0, 0, 0.568);
+    background-color: rgba(0, 0, 0, 0.164);
   }
   .container-refs__Home-P3 {
     /* border: 2px solid green; */
@@ -660,6 +670,8 @@
     font-weight: 300;
     z-index: 2;
     color: white;
+    overflow-wrap: break-word;
+    width: 50%;
     text-align: center;
   }
   .cont-ref__Home-P3 {
