correcion a bg de proyectos

--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -36,10 +36,9 @@
         transition: .5s ease;
         background-blend-mode: multiply;
         border-radius: 5px;
-            background-color: rgba(0, 0, 0, 0.726);
-
+        background-color: transparent;
         &:hover {
-            background-color: rgba(0, 0, 0, 0.164);
+            background-color: rgba(0, 0, 0, 0.479);
         }
     }
 
