--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -33,12 +33,13 @@
         justify-content: center;
         align-items: center;
         flex-direction: row-reverse;
-        transition: .5s ease;
+        transition: .4s ease-in;
         background-blend-mode: multiply;
         border-radius: 5px;
         background-color: transparent;
+
         &:hover {
-            background-color: rgba(0, 0, 0, 0.479);
+            background-color: rgba(0, 0, 0, 0.720);
         }
     }
 
@@ -77,5 +78,42 @@
         width: 100%;
         height: 100%;
         color: white;
+    }
+
+    #container-ver-mas-proyectos__Home-P3 {
+        display: flex;
+        padding: 1rem;
+        align-items: center;
+        justify-content: center;
+        gap: .5rem;
+        background: linear-gradient(to top left, rgb(12, 12, 12), rgb(0, 0, 0));
+        margin: 1rem 0;
+        color: white;
+    }
+
+    #titulo-ver-mas__Home-P3 {
+        font-weight: 300;
+        font-size: 15px;
+    }
+
+    @keyframes slide {
+        0% {
+            transform: translateX(0px);
+        }
+
+        50% {
+            transform: translateX(20px);
+        }
+
+        100% {
+            transform: translateX(0px);
+        }
+    }
+
+    #flecha-right__Home-P3 {
+        width: 1.5rem;
+        height: 1.5rem;
+        margin-top: 1px;
+        animation: slide 1.5s linear infinite;
     }
 }
