--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -640,14 +640,14 @@
     -webkit-box-direction: reverse;
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
-    -webkit-transition: .5s ease;
-    transition: .5s ease;
+    -webkit-transition: .4s ease-in;
+    transition: .4s ease-in;
     background-blend-mode: multiply;
     border-radius: 5px;
     background-color: transparent;
   }
   .card-project__Home-P3:hover {
-    background-color: rgba(0, 0, 0, 0.479);
+    background-color: rgba(0, 0, 0, 0.72);
   }
   .container-refs__Home-P3 {
     /* border: 2px solid green; */
@@ -694,6 +694,62 @@
     width: 100%;
     height: 100%;
     color: white;
+  }
+  #container-ver-mas-proyectos__Home-P3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 1rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: .5rem;
+    background: -webkit-gradient(linear, right bottom, left top, from(#0c0c0c), to(black));
+    background: linear-gradient(to top left, #0c0c0c, black);
+    margin: 1rem 0;
+    color: white;
+  }
+  #titulo-ver-mas__Home-P3 {
+    font-weight: 300;
+    font-size: 15px;
+  }
+  @-webkit-keyframes slide {
+    0% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+    }
+    50% {
+      -webkit-transform: translateX(20px);
+              transform: translateX(20px);
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+    }
+  }
+  @keyframes slide {
+    0% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+    }
+    50% {
+      -webkit-transform: translateX(20px);
+              transform: translateX(20px);
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+    }
+  }
+  #flecha-right__Home-P3 {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-top: 1px;
+    -webkit-animation: slide 1.5s linear infinite;
+            animation: slide 1.5s linear infinite;
   }
 }
 /*# sourceMappingURL=styles.css.map */
