creacion de home-P4

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -3,4 +3,5 @@
 @import './partials/navbar_desktop';
 @import './partials/home_p1';
 @import './partials/home_p2';
-@import './partials/home_p3'
+@import './partials/home_p3';
+@import './partials//home_p4';
