--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -82,7 +82,7 @@
 
     #container-ver-mas-proyectos__Home-P3 {
         display: flex;
-        padding: 1rem;
+        padding: .9rem;
         align-items: center;
         justify-content: center;
         gap: .5rem;
@@ -93,7 +93,7 @@
 
     #titulo-ver-mas__Home-P3 {
         font-weight: 300;
-        font-size: 15px;
+        font-size: 16px;
     }
 
     @keyframes slide {
@@ -102,7 +102,7 @@
         }
 
         50% {
-            transform: translateX(20px);
+            transform: translateX(10px);
         }
 
         100% {
