--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -699,7 +699,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding: 1rem;
+    padding: .9rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -714,7 +714,7 @@
   }
   #titulo-ver-mas__Home-P3 {
     font-weight: 300;
-    font-size: 15px;
+    font-size: 16px;
   }
   @-webkit-keyframes slide {
     0% {
@@ -722,8 +722,8 @@
               transform: translateX(0px);
     }
     50% {
-      -webkit-transform: translateX(20px);
-              transform: translateX(20px);
+      -webkit-transform: translateX(10px);
+              transform: translateX(10px);
     }
     100% {
       -webkit-transform: translateX(0px);
@@ -736,8 +736,8 @@
               transform: translateX(0px);
     }
     50% {
-      -webkit-transform: translateX(20px);
-              transform: translateX(20px);
+      -webkit-transform: translateX(10px);
+              transform: translateX(10px);
     }
     100% {
       -webkit-transform: translateX(0px);
