--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -4,4 +4,4 @@
 @import './partials/home_p1';
 @import './partials/home_p2';
 @import './partials/home_p3';
-@import './partials//home_p4';
+@import './partials/home_p4';
