--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -1,1 +1,89 @@
 //? Estilos Home_P4
+
+@media screen and (min-width:360px) {
+    #container-general__Home-P4 {
+        /*  border: 2px solid green; */
+        height: 100vh;
+        background-color:  #e5e7eb;
+        margin-top: 2.6rem;
+        display: flex;
+        flex-direction: column;
+    }
+
+    @keyframes textColor {
+        50% {
+            color: #5b21b6;
+        }
+    }
+
+    #titulo-contacto__Home-P4 {
+        color: #6b7280;
+        font-size: 3.5rem;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 200;
+        animation: textColor 8s infinite;
+        text-align: center;
+        margin-top: 1rem;
+    }
+
+    .contenedor-grid-socialMedia__Home-P4 {
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 10px;
+        margin-top: 1rem;
+    }
+
+    .item-grid-socialMedia__Home-P4 {
+        background-color: #f4f4f5;
+        padding: 20px;
+        display: flex;
+        gap: .2rem;
+        align-items: center;
+    }
+
+    .cont-logo-socialMed__Home-P4 {
+        /* border: 2px solid green; */
+        padding: 9px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo-socialMedia__Home-P4 {
+        /* border: 2px solid red; */
+        width: 1.8rem;
+        height: 1.8rem;
+    }
+
+    .item-grid-socialMedia__Home-P4 h3{
+        font-weight: 600;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    /* Estilos para cada contenedor de Social Media */
+    .item-grid-socialMedia__Home-P4:nth-child(1) {
+        color: #EA669B;
+    }
+
+    .item-grid-socialMedia__Home-P4:nth-child(2) {
+        color: #2B7DBE;
+    }
+
+    .item-grid-socialMedia__Home-P4:nth-child(3) {
+        color: #737373;
+    }
+
+    .item-grid-socialMedia__Home-P4:nth-child(4) {
+        color: #64C351;
+    }
+}
+
+@media screen and (min-width:414px) {
+    #container-general__Home-P4 {
+        /*  border: 2px solid green; */
+        margin-top: -0.1rem;
+    }
+}
