--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -603,6 +603,7 @@
     /* border: 2px solid red; */
     height: 100vh;
     background-color: white;
+    border: none;
   }
   #titulo-proyectos__Home-P3 {
     font-size: 25px;
@@ -699,7 +700,6 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding: .9rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -715,6 +715,7 @@
   #titulo-ver-mas__Home-P3 {
     font-weight: 300;
     font-size: 16px;
+    padding: 1.5rem 0;
   }
   @-webkit-keyframes slide {
     0% {
@@ -750,6 +751,107 @@
     margin-top: 1px;
     -webkit-animation: slide 1.5s linear infinite;
             animation: slide 1.5s linear infinite;
+  }
+}
+
+@media screen and (min-width: 360px) {
+  #container-general__Home-P4 {
+    /*  border: 2px solid green; */
+    height: 100vh;
+    background-color: #e5e7eb;
+    margin-top: 2.6rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  @-webkit-keyframes textColor {
+    50% {
+      color: #5b21b6;
+    }
+  }
+  @keyframes textColor {
+    50% {
+      color: #5b21b6;
+    }
+  }
+  #titulo-contacto__Home-P4 {
+    color: #6b7280;
+    font-size: 3.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    -webkit-animation: textColor 8s infinite;
+            animation: textColor 8s infinite;
+    text-align: center;
+    margin-top: 1rem;
+  }
+  .contenedor-grid-socialMedia__Home-P4 {
+    display: -ms-grid;
+    display: grid;
+    width: 100%;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+    margin-top: 1rem;
+  }
+  .item-grid-socialMedia__Home-P4 {
+    background-color: #f4f4f5;
+    padding: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: .2rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .cont-logo-socialMed__Home-P4 {
+    /* border: 2px solid green; */
+    padding: 9px;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .logo-socialMedia__Home-P4 {
+    /* border: 2px solid red; */
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+  .item-grid-socialMedia__Home-P4 h3 {
+    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  /* Estilos para cada contenedor de Social Media */
+  .item-grid-socialMedia__Home-P4:nth-child(1) {
+    color: #EA669B;
+  }
+  .item-grid-socialMedia__Home-P4:nth-child(2) {
+    color: #2B7DBE;
+  }
+  .item-grid-socialMedia__Home-P4:nth-child(3) {
+    color: #737373;
+  }
+  .item-grid-socialMedia__Home-P4:nth-child(4) {
+    color: #64C351;
+  }
+}
+
+@media screen and (min-width: 414px) {
+  #container-general__Home-P4 {
+    /*  border: 2px solid green; */
+    margin-top: -0.1rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
