aplicamos particles.js en home

--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -6,6 +6,7 @@
         height: 100vh;
         background-color: white;
         border: none;
+        z-index: 1;
     }
 
     #titulo-proyectos__Home-P3 {
