--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -21,7 +21,8 @@
         flex-direction: column;
         padding: .7rem;
         min-height: 120vh;
-        background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0));
+        /* background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0)); */
+        background-color: #e5e5e5;
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
         z-index: -1;
@@ -36,6 +37,7 @@
         object-fit: cover;
         border-radius: 50%;
         margin: 1rem 0 0 1rem;
+        z-index: 10;
     }
 
     #container-info__Home-P1 {
@@ -47,11 +49,12 @@
         align-items: center;
         gap: .3rem;
         height: 20rem;
+        z-index: 10;
     }
 
     .item-text__Home-P1 {
         font-weight: 300;
-        color: white;
+        color: black;
     }
 
     .item-text__Home-P1:nth-child(1) {
@@ -139,6 +142,7 @@
     }
 
     #texto-home__P1 {
+        color: black;
         font-size: 14px;
         text-align: center;
         line-height: 1.7rem;
@@ -148,10 +152,6 @@
 }
 
 @media screen and (min-width:375px) {
-    #container-general__Home_P1 {
-        /* border: 2px solid red; */
-    }
-
     #image-home_P1 {
         /* border: 2px solid green; */
         width: 7.5rem;
