--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -337,8 +337,8 @@
             flex-direction: column;
     padding: .7rem;
     min-height: 120vh;
-    background: -webkit-gradient(linear, right bottom, left top, from(#2b2b2b), to(black));
-    background: linear-gradient(to top left, #2b2b2b, black);
+    /* background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0)); */
+    background-color: #e5e5e5;
     background-size: 200% auto;
     -webkit-animation: gradient-animation 5s linear infinite;
             animation: gradient-animation 5s linear infinite;
@@ -355,6 +355,7 @@
        object-fit: cover;
     border-radius: 50%;
     margin: 1rem 0 0 1rem;
+    z-index: 10;
   }
   #container-info__Home-P1 {
     /* border: 2px solid green; */
@@ -372,10 +373,11 @@
             align-items: center;
     gap: .3rem;
     height: 20rem;
+    z-index: 10;
   }
   .item-text__Home-P1 {
     font-weight: 300;
-    color: white;
+    color: black;
   }
   .item-text__Home-P1:nth-child(1) {
     font-size: 30px;
@@ -475,6 +477,7 @@
     border-left: none;
   }
   #texto-home__P1 {
+    color: black;
     font-size: 14px;
     text-align: center;
     line-height: 1.7rem;
@@ -484,9 +487,6 @@
 }
 
 @media screen and (min-width: 375px) {
-  #container-general__Home_P1 {
-    /* border: 2px solid red; */
-  }
   #image-home_P1 {
     /* border: 2px solid green; */
     width: 7.5rem;
@@ -604,6 +604,7 @@
     height: 100vh;
     background-color: white;
     border: none;
+    z-index: 1;
   }
   #titulo-proyectos__Home-P3 {
     font-size: 25px;
