--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -22,7 +22,7 @@
         padding: .7rem;
         min-height: 120vh;
         /* background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0)); */
-        background-color: #e5e5e5;
+        background-color: #f5f5f5;
         background-size: 200% auto;
         animation: gradient-animation 5s linear infinite;
         z-index: -1;
