--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -338,7 +338,7 @@
     padding: .7rem;
     min-height: 120vh;
     /* background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0)); */
-    background-color: #e5e5e5;
+    background-color: #f5f5f5;
     background-size: 200% auto;
     -webkit-animation: gradient-animation 5s linear infinite;
             animation: gradient-animation 5s linear infinite;
@@ -677,7 +677,7 @@
     text-align: center;
   }
   .cont-ref__Home-P3 {
-    border: 2px solid gray;
+    border: 2.5px solid gray;
     border-radius: 50%;
     height: 3rem;
     width: 3rem;
@@ -691,6 +691,7 @@
         -ms-flex-align: center;
             align-items: center;
     padding: .6rem;
+    background-color: rgba(0, 0, 0, 0.856);
   }
   .btn-ref__Home-P3 {
     width: 100%;
@@ -758,6 +759,10 @@
 @media screen and (min-width: 414px) {
   #container-ver-mas-proyectos__Home-P3 {
     margin-top: 2.5rem;
+  }
+  .card-project__Home-P3 {
+    /* border: 2px solid firebrick; */
+    height: 13.5rem;
   }
 }
 
