Correciones en home 1 - desbordamiento de contenido en contenedor principal

--- a/app/styles/partials/_home_p1.scss
+++ b/app/styles/partials/_home_p1.scss
@@ -19,8 +19,7 @@
         /* border: 2px solid red; */
         display: flex;
         flex-direction: column;
-        padding: .7rem;
-        min-height: 120vh;
+        padding: .6rem;
         /* background: linear-gradient(to top left, rgb(43, 43, 43), rgb(0, 0, 0)); */
         background-color: #f5f5f5;
         background-size: 200% auto;
@@ -28,6 +27,8 @@
         z-index: -1;
         position: sticky;
         top: 0;
+        align-items: center;
+        min-height: 98vh;
     }
 
     #image-home_P1 {
@@ -43,12 +44,12 @@
     #container-info__Home-P1 {
         /* border: 2px solid green; */
         width: 100%;
-        margin-top: 2rem;
+        margin-top: .5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: .3rem;
-        height: 20rem;
+        /*  height: 20rem; */
         z-index: 10;
     }
 
@@ -64,6 +65,7 @@
     .item-text__Home-P1:nth-child(2) {
         font-size: 14px;
         color: #737373;
+        margin-top: 5px;
     }
 
     #button-descargarCV__Home__P1 {
@@ -103,7 +105,7 @@
     #container-texto__home__P1 {
         position: relative;
         width: 100%;
-        margin-top: 1.8rem;
+        margin-top: 1rem;
         color: white;
         display: flex;
         justify-content: center;
@@ -152,22 +154,24 @@
 }
 
 @media screen and (min-width:375px) {
+    #container-general__Home_P1 {
+        min-height: 110vh;
+    }
+
     #image-home_P1 {
         /* border: 2px solid green; */
-        width: 7.5rem;
-        height: 7.5rem;
-        object-fit: cover;
-        border-radius: 50%;
-        margin: 1rem 0 0 1.3rem;
+        width: 8rem;
+        height: 8rem;
     }
 
     .item-text__Home-P1:nth-child(2) {
         font-size: 16px;
+        margin-top: 5px;
     }
 
     #container-texto__home__P1 {
-        margin-top: 1rem;
-        padding: 2.2rem;
+        margin-top: .5rem;
+        padding: 1.7rem;
     }
 
     #texto-home__P1 {
@@ -179,11 +183,9 @@
 @media screen and (min-width:414px) {
     #image-home_P1 {
         /* border: 2px solid green; */
-        width: 7.5rem;
-        height: 7.5rem;
-        object-fit: cover;
-        border-radius: 50%;
-        margin: 1rem 0 0 1.3rem;
+        width: 10rem;
+        height: 10rem;
+        margin-bottom: 1rem;
     }
 
     .item-text__Home-P1:nth-child(1) {
@@ -192,11 +194,12 @@
 
     .item-text__Home-P1:nth-child(2) {
         font-size: 16px;
+        margin-top: 10px;
     }
 
     #container-texto__home__P1 {
         margin-top: 1.5rem;
-        padding: 1.9rem;
+        padding: 2rem;
     }
 
     #texto-home__P1 {
